# glm-py

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  nml_temp.py  objects.inv  pyproject.toml  requirements.txt  setup.py  sparkling.nml
.devcontainer/: requirements-dev.txt  requirements.txt
.github/workflows/: build-and-deploy.yml  build-and-test-deploy.yml  build.yml  test-built-dist.yaml  test-glmpy.yml  windows-wheels.yml
data/: sparkling_lake.json
development/: index.html
dimensions/: index.html
docs/: development.md  farm-dam-tutorial.md  how-to.md  index.md  json-to-nml.md  requirements-dev.txt  simulations.md  sparkling-lake-tutorial.md  tutorials.md
docs/blog/posts/: sparkling-lake-tutorial.md
docs/css/: extra.css
docs/custom_theme/: main.html
docs/data/: rainfall-farm-dam-tutorial.csv
examples/: dam-dims.py  examples.ipynb  json-to-nml.py  nml.py
farm-dam-tutorial/: index.html
glmpy/: dimensions.py  dummy.c  glm_json.py  inflows.py  json-to-nml.py  json.py  nml.py  outflows.py  simulation.py
how-to/: index.html
inflows/: index.html
json-to-nml/: index.html
nml/: index.html
notebooks/: sparkling-lake-tutorial.ipynb
notebooks/glmpy-demo/: glmpy_demo.ipynb  run_glmpy.py
outflows/: index.html
scripts/: format.sh
search/: search_index.json
simulation/: index.html
sparkling-lake-tutorial/: index.html
tests/: simulation.py  test_CatchmentRunoffInflows.py  test_dimensions.py  test_inflows.py  test_json.py  test_nml.py  test_outflows.py
