# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-py"
version = "0.0.1"
description = "Python tools for running General Lake Model (GLM) simulations"
readme = "README.md"
authors = []
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["GLM", "Lake", "Model"]
requires-python = ">=3.8"

dependencies = [
    "pandas[excel]>=2.0.1"
]

[project.urls]
Repository = "https://github.com/WET-tool/glm-py"

[project.scripts]
