# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-py"
version = "0.0.1"
description = "Python tools for running General Lake Model (GLM) simulations"
readme = "README.md"
authors = []
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["GLM", "Lake", "Model"]
requires-python = ">=3.9"

dependencies = [
    "pandas[excel]>=2.0.1",
    "fastapi[all]>=0.88.0",
    "python-multipart"
]

[project.urls]
Repository = "https://github.com/WET-tool/glm-py"

[project.scripts]

[tool.setuptools.packages.find]
include = ["glmpy", "glmpy.*"]
namespaces = false
